example/lib/src/generated/errors/errors_localization_it.dart
// This file is generated by the Google Sheets localization tool. Do not edit manually.

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Italian (`it`).
class ErrorsLocalizationIt extends ErrorsLocalization {
  ErrorsLocalizationIt([String locale = 'it']) : super(locale);

  @override
  String get error => 'Si è verificato un errore';

  @override
  String get unexpectedError => 'Si è verificato un errore imprevisto';

  @override
  String authErrorMessages(String errorCode) {
    String _temp0 = intl.Intl.selectLogic(
      errorCode,
      {
        'passwordLengthError': 'La password deve contenere almeno 6 caratteri',
        'invalidEmailOrPhoneNumberError':
            'Fornisci un\'email valida o un numero di telefono nel formato internazionale. Esempi: me@example.com e +1234567890987',
        'invalidEmailError': 'L\'email non è valida',
        'operationNotAllowedError': 'Operazione non consentita',
        'weakPasswordError': 'La password è troppo debole',
        'userTokenExpiredError': 'Il token utente è scaduto',
        'invalidPhoneNumberError':
            'Fornisci numeri di telefono nel formato internazionale, iniziando con + e il prefisso del paese.',
        'invalidActionCodeError': 'Il codice azione non è valido',
        'networkRequestFailedError': 'Richiesta di rete non riuscita',
        'tooManyRequestsError': 'Troppe richieste',
        'acceptTermsAndConditionsError':
            'Accetta i termini e le condizioni e conferma la politica sulla privacy.',
        'acceptAIConsentError':
            'Riconosci che le consulenze sono con un\'IA e non con un medico abilitato.',
        'emailOrPhoneError': 'Errore email o telefono',
        'passwordError': 'Errore password',
        'unknownError': 'Errore sconosciuto',
        'googleSSOError': 'Errore Google SSO',
        'emailAlreadyInUse':
            'L\'indirizzo email è già utilizzato da un altro account.',
        'invalidCredentialError': 'Credenziali non valide',
        'invalidAppCredentialError': 'Credenziali app non valide',
        'invalidVerificationCodeError': 'Codice di verifica non valido',
        'other': 'Errore sconosciuto',
      },
    );
    return '$_temp0\n';
  }

  @override
  String get bugReportSentText => 'Segnalazione bug inviata con successo.';
}
